docs: add GitHub App PR review documentation and separate GitHub Actions
- Created configuration/github-app.mdx with PR review agent setup and configuration
- Renamed configuration/github.mdx → configuration/github-actions.mdx for clarity
- Added cross-references between both pages to help users find the right integration
- Updated mint.json navigation to include both pages
- Verified with code: autoRunOnPrs toggle, reviewContext, environment mapping
- Documented agent workflow: classify → assess → create tests → run → review
- Included troubleshooting section and limitations

This separates two different GitHub integration methods:
- GitHub Actions: Manual control via CI/CD workflows
- GitHub App: Automatic AI-powered PR reviews

--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -1,10 +1,16 @@
 ---
-title: GitHub
-description: 'Trigger your tests from a GitHub repo'
+title: GitHub Actions
+description: 'Trigger tests from CI/CD workflows with full control'
 icon: 'github'
 ---
 
-## GitHub Integration
+# GitHub Actions Integration
+
+Integrate QA.tech into your CI/CD workflows with the GitHub Action. You control which tests run, when they run, and which environments to test.
+
+<Note>
+Looking for automatic AI-powered PR reviews? See [GitHub App](/configuration/github-app) instead.
+</Note>
 
 Automate your QA process by integrating QA.tech with your GitHub workflows. You can trigger test runs automatically after deployments, on pull requests, or any other GitHub event.
 
