docs: improve structure, add exploratory testing, and fix inconsistencies
Based on comprehensive team feedback and code verification:

**github-app.mdx improvements:**
- Removed double H1 header (following ai-agent-testing.mdx pattern)
- Simplified Step 2: Focus on 'Select Repository' action
- Removed 'Configuration Options' section (reorganized content)
- Moved Review Context examples to Best Practices
- Removed duplicate Environment Mapping from setup steps
- Removed redundant 'What gets tested' section (covered in workflow)
- Added 'Understanding GitHub Deployments' section (Patrick/Tobias feedback)
- Added Best Practices section with 5 actionable tips (Daniel feedback)
- Fixed troubleshooting inconsistency (line 158) - code-verified
- Applied left-alignment to table headers (Erik feedback)

**github-actions.mdx improvements:**
- Removed double H1 header
- Removed redundant intro paragraph (Liza feedback)
- Added cross-reference to exploratory testing

**github-exploratory-testing.mdx (NEW):**
- Code-verified documentation based on explorative-agent.ts
- Minimal 63-line page following best practices
- Private beta warning with contact (daniel@qa.tech)
- Clear comparison table vs automatic PR reviews
- Verified trigger: @qatech mention (github/mention.ts:76)

**mint.json:**
- Added exploratory testing to Configuration navigation

All changes code-verified against monorepo (pr-review-agent.ts, explorative-agent.ts, GitHubAppIntegrationSettings.tsx)

--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -298,3 +298,7 @@ Looking for automatic AI-powered PR reviews? See [GitHub App](/configuration/git
 </Tabs>
 
 For more information about our API and other integration options, check out our [Start Run API Reference](/api-reference/start-run).
+
+## Related Features
+
+Looking for on-demand exploratory testing? See [Exploratory Testing via GitHub](/configuration/github-exploratory-testing) to trigger deep testing by mentioning @qatech in PR comments.
