--- a/core-concepts/overview.mdx
+++ b/core-concepts/overview.mdx
@@ -4,6 +4,18 @@ description: Understand the fundamental concepts that power QA.tech's AI-driven 
 icon: rocket
 ---
 
-## Testing with AI agents
+QA.tech combines AI agents with traditional testing infrastructure to handle web application testing at scale. This section explains the core concepts behind the platform—from how AI agents work, to managing test data, environments, and integrations.
 
-QA.tech is combining the best parts of automated tests - the speed, repeatability and
+## What you'll learn
+
+**AI & Testing Fundamentals** - How AI agents execute tests, when they're more effective than scripts, and how the [Chat Assistant](/core-concepts/ai-chat-assistant) coordinates specialized testing agents.
+
+**Test Management** - How to organize [test cases](/core-concepts/tests-and-results), use [test plans](/core-concepts/test-plans) for grouping, manage [dependencies](/core-concepts/dependencies) between tests, and track results.
+
+**Knowledge & Context** - How the [knowledge graph](/core-concepts/knowledge-graph) learns your application's structure and how the [knowledge base](/core-concepts/knowledge) stores domain-specific information to improve test quality.
+
+**Environments & Configuration** - Managing [applications and environments](/core-concepts/applications-and-environments), handling [preview environments](/core-concepts/preview-environments) for PR testing, and storing credentials in [configs](/core-concepts/configs).
+
+**Workflow Integration** - Connecting with GitHub for [automated PR reviews](/configuration/github-app), tracking [issues](/core-concepts/issues) from test failures, and setting up [notifications](/core-concepts/notifications).
+
+Start with [AI Agent Testing](/core-concepts/ai-agent-testing) to understand the foundation, then explore the topics most relevant to your workflow.
