--- a/configuration/github-app.mdx
+++ b/configuration/github-app.mdx
@@ -194,6 +194,7 @@ If you need to:
 - Choose specific test plans to run
 - Trigger tests from custom CI/CD steps
 - Control test execution timing
+- Run deep exploratory testing on-demand
 
-Use [GitHub Actions](/configuration/github-actions) instead, or use both for comprehensive coverage.
+See [GitHub Actions](/configuration/github-actions) for manual CI/CD integration and on-demand exploratory testing via `@qatech` mentions. You can use both approaches for comprehensive coverage.
 
