--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -10,294 +10,160 @@ Integrate QA.tech into your CI/CD workflows with the GitHub Action. You control 
 Looking for automatic AI-powered PR reviews? See [GitHub App](/configuration/github-app) instead.
 </Note>
 
-<Tabs>
-    <Tab title="Setup Guide">
-        <Steps>
-            <Step title="Configure Secrets">
-                Add the following secrets to your GitHub repository:
-                
-                - `QATECH_API_TOKEN` - Your QA.tech API token
-                - `QATECH_PROJECT_ID` - Your QA.tech project ID
-                
-                You can find these values in your [project settings](https://app.qa.tech/dashboard/current-project/settings/integrations).
-                
-                Learn more about [creating secrets in GitHub Actions](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-a-repository).
-            </Step>
-            
-            <Step title="Basic Setup">
-                Create a new workflow file in your repository at `.github/workflows/qatech.yml`:
+<Steps>
+  <Step title="Configure Secrets">
+    Add the following secrets to your GitHub repository:
+    
+    - `QATECH_API_TOKEN` - Your QA.tech API token
+    - `QATECH_PROJECT_ID` - Your QA.tech project ID
+    
+    You can find these values in your [project settings](https://app.qa.tech/dashboard/current-project/settings/integrations).
+    
+    Learn more about [creating secrets in GitHub Actions](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-a-repository).
+  </Step>
+  
+  <Step title="Create Workflow File">
+    Create `.github/workflows/qatech.yml` in your repository:
 
-                ```yaml
-                name: QA.tech Tests
-                on:
-                  push:
-                    branches:
-                      - main
+    ```yaml
+    name: QA.tech Tests
+    on:
+      push:
+        branches:
+          - main
 
-                jobs:
-                  test:
-                    runs-on: ubuntu-latest
-                    steps:
-                      - uses: QAdottech/run-action@v2
-                        with:
-                          project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                          api_token: ${{ secrets.QATECH_API_TOKEN }}
-                          blocking: true
-                ```
+    jobs:
+      test:
+        runs-on: ubuntu-latest
+        steps:
+          - uses: QAdottech/run-action@v2
+            with:
+              project_id: ${{ secrets.QATECH_PROJECT_ID }}
+              api_token: ${{ secrets.QATECH_API_TOKEN }}
+              blocking: true
+    ```
 
-          This will run all tests in your project whenever code is pushed to the main branch, and the blocking option will make it wait for the result of the run before completing the workflow.
+    This runs all tests in your project whenever code is pushed to `main`. The `blocking` option waits for test results before completing the workflow.
+  </Step>
 
- </Step>
+  <Step title="Trigger Your First Run">
+    Push to your main branch or open a PR (depending on your workflow configuration). QA.tech will execute your tests and report results directly in the GitHub Actions UI.
+  </Step>
+</Steps>
 
-            <Step title="Advanced Setup">
-                For more control, you can:
+## Common Patterns
 
-                1. Run specific test plans by adding their IDs:
-                ```yaml
-                - uses: QAdottech/run-action@v2
-                  with:
-                    project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                    api_token: ${{ secrets.QATECH_API_TOKEN }}
-                    test_plan_short_id: 'abc123'
-                    blocking: true
-                ```
+**Run tests on pull requests:**
+```yaml
+name: QA.tech PR Tests
+on:
+  pull_request:
+    branches: [ main ]
 
-                2. Trigger tests after deployment:
-                ```yaml
-                name: 'Deploy and Test'
-                jobs:
-                  deploy:
-                    # Your deployment steps here
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: QAdottech/run-action@v2
+        with:
+          project_id: ${{ secrets.QATECH_PROJECT_ID }}
+          api_token: ${{ secrets.QATECH_API_TOKEN }}
+          blocking: true
+```
 
-                  qatech-tests:
-                    needs: deploy
-                    runs-on: ubuntu-latest
-                    steps:
-                      - uses: QAdottech/run-action@v2
-                        with:
-                          project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                          api_token: ${{ secrets.QATECH_API_TOKEN }}
-                          blocking: true
-                ```
-            </Step>
-        </Steps>
-    </Tab>
+**Run specific test plan:**
+```yaml
+- uses: QAdottech/run-action@v2
+  with:
+    project_id: ${{ secrets.QATECH_PROJECT_ID }}
+    api_token: ${{ secrets.QATECH_API_TOKEN }}
+    test_plan_short_id: 'checkout-flow'
+    blocking: true
+```
 
-    <Tab title="Action Options">
-        The QA.tech GitHub Action accepts the following inputs:
+**Test preview deployments with environment overrides:**
+```yaml
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    outputs:
+      preview_url: ${{ steps.deploy.outputs.url }}
+    steps:
+      - name: Deploy to Vercel
+        id: deploy
+        run: |
+          # Your deployment logic
+          echo "url=https://preview-${{ github.event.number }}.vercel.app" >> $GITHUB_OUTPUT
 
-        | Input | Description | Required | Default |
-        |-------|-------------|----------|---------|
-        | `project_id` | Your QA.tech project ID | Yes | - |
-        | `api_token` | QA.tech API token | Yes | - |
-        | `api_url` | Custom API URL if needed | No | https://app.qa.tech |
-        | `test_plan_short_id` | Test plan short ID to run | No | - |
-        | `blocking` | Wait for test results before completing the workflow | No | false |
-        | `applications_config` | JSON string containing application environment overrides | No | - |
-
-        The action outputs include:
-
-        | Output | Description |
-        |--------|-------------|
-        | `runId` | The ID of the created test run |
-        | `runShortId` | A short ID for the test run |
-        | `success` | Boolean indicating if the run was successful |
-        | `run_result` | The test execution result (PASSED, FAILED, SKIPPED). Only set when blocking is true. |
-        | `run_status` | The final status of the run (INITIATED, RUNNING, COMPLETED, ERROR, CANCELLED). Only set when blocking is true. |
-
-    </Tab>
-
-    <Tab title="Examples">
-        Here are some common workflow patterns:
-
-        **Run tests on pull requests:**
-        ```yaml
-        name: QA.tech Tests
-        on:
-          pull_request:
-            branches: [ main ]
-
-        jobs:
-          test:
-            runs-on: ubuntu-latest
-            steps:
-              - uses: QAdottech/run-action@v2
-                with:
-                  project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                  api_token: ${{ secrets.QATECH_API_TOKEN }}
-                  blocking: true
-        ```
-
-        **Run tests after staging deployment:**
-        ```yaml
-        name: Deploy to Staging
-        on:
-          push:
-            branches: [ staging ]
-
-        jobs:
-          deploy:
-            runs-on: ubuntu-latest
-            steps:
-              # Your deployment steps here
-
-          test:
-            needs: deploy
-            runs-on: ubuntu-latest
-            steps:
-              - uses: QAdottech/run-action@v2
-                with:
-                  project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                  api_token: ${{ secrets.QATECH_API_TOKEN }}
-                  blocking: true # Optional, default false
-                  test_plan_short_id: 'staging-tests' # Optional
-        ```
-
-        **Test preview deployments with environment overrides:**
-        ```yaml
-        name: Test Preview Deployment
-        on:
-          pull_request:
-            types: [opened, synchronize]
-
-        jobs:
-          deploy:
-            runs-on: ubuntu-latest
-            outputs:
-              frontend_url: ${{ steps.deploy_frontend.outputs.url }}
-              backend_url: ${{ steps.deploy_backend.outputs.url }}
-            steps:
-              - name: Deploy Frontend
-                id: deploy_frontend
-                run: |
-                  # Your deployment logic here
-                  echo "url=https://preview-${{ github.event.number }}-frontend.vercel.app" >> $GITHUB_OUTPUT
-
-              - name: Deploy Backend
-                id: deploy_backend
-                run: |
-                  # Your deployment logic here
-                  echo "url=https://preview-${{ github.event.number }}-backend.vercel.app" >> $GITHUB_OUTPUT
-
-          test:
-            runs-on: ubuntu-latest
-            needs: deploy
-            steps:
-              - uses: QAdottech/run-action@v2
-                with:
-                  project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                  api_token: ${{ secrets.QATECH_API_TOKEN }}
-                  test_plan_short_id: 'your-test-plan-id'
-                  blocking: true
-                  applications_config: |
-                    {
-                      "applications": {
-                        "frontend-app-id": {
-                          "environment": {
-                            "url": "${{ needs.deploy.outputs.frontend_url }}",
-                            "name": "PR-${{ github.event.number }}-Frontend"
-                          }
-                        },
-                        "backend-app-id": {
-                          "environment": {
-                            "url": "${{ needs.deploy.outputs.backend_url }}",
-                            "name": "PR-${{ github.event.number }}-Backend"
-                          }
-                        }
-                      }
-                    }
-        ```
-
-        **Multiple test plans with different triggers:**
-        ```yaml
-        name: Comprehensive Tests
-        on:
-          schedule:
-            - cron: '0 2 * * *' # Daily at 2 AM
-
-        jobs:
-          smoke-tests:
-            runs-on: ubuntu-latest
-            steps:
-              - uses: QAdottech/run-action@v2
-                with:
-                  project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                  api_token: ${{ secrets.QATECH_API_TOKEN }}
-                  test_plan_short_id: 'smoke-tests'
-
-          regression-tests:
-            runs-on: ubuntu-latest
-            needs: smoke-tests
-            steps:
-              - uses: QAdottech/run-action@v2
-                with:
-                  project_id: ${{ secrets.QATECH_PROJECT_ID }}
-                  api_token: ${{ secrets.QATECH_API_TOKEN }}
-                  test_plan_short_id: 'regression-tests'
-                  blocking: true
-        ```
-    </Tab>
-
-    <Tab title="Direct API Integration">
-        If you prefer direct API calls instead of using the GitHub Action, you can use cURL:
-
-        **Basic API usage:**
-        ```bash
-        curl -X POST \
-          -H "Authorization: Bearer $QATECH_API_TOKEN" \
-          -H "Content-Type: application/json" \
-          -d '{"testPlanShortId": "your-test-plan-id"}' \
-          https://app.qa.tech/api/projects/$QATECH_PROJECT_ID/runs
-        ```
-
-        **With application environment overrides:**
-        ```bash
-        curl -X POST \
-          -H "Authorization: Bearer $QATECH_API_TOKEN" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "testPlanShortId": "your-test-plan-id",
-            "applications": {
-              "app-short-id-1": {
-                "environment": {
-                  "url": "https://preview-123.vercel.app",
-                  "name": "Preview Environment"
+  test:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: QAdottech/run-action@v2
+        with:
+          project_id: ${{ secrets.QATECH_PROJECT_ID }}
+          api_token: ${{ secrets.QATECH_API_TOKEN }}
+          test_plan_short_id: 'regression-suite'
+          blocking: true
+          applications_config: |
+            {
+              "applications": {
+                "frontend-app-id": {
+                  "environment": {
+                    "url": "${{ needs.deploy.outputs.preview_url }}",
+                    "name": "PR-${{ github.event.number }}"
+                  }
                 }
               }
             }
-          }' \
-          https://app.qa.tech/api/projects/$QATECH_PROJECT_ID/runs
-        ```
+```
 
-        **In GitHub Actions workflow:**
-        ```yaml
-        - name: Trigger QA.tech Tests
-          run: |
-            curl -X POST \
-              -H "Authorization: Bearer ${{ secrets.QATECH_API_TOKEN }}" \
-              -H "Content-Type: application/json" \
-              -d '{
-                "testPlanShortId": "your-test-plan-id",
-                "applications": {
-                  "frontend-app-id": {
-                    "environment": {
-                      "url": "${{ steps.deploy.outputs.url }}",
-                      "name": "PR-${{ github.event.number }}"
-                    }
-                  }
-                }
-              }' \
-              https://app.qa.tech/api/projects/${{ secrets.QATECH_PROJECT_ID }}/runs
-        ```
+## Action Configuration
 
-        <Note>
-        For complete API documentation including error responses, authentication details, and additional examples, see the [Start Run API Reference](/api-reference/start-run).
-        </Note>
-    </Tab>
+**Inputs:**
 
-</Tabs>
+| Input | Description | Required | Default |
+|:------|:------------|:---------|:--------|
+| `project_id` | Your QA.tech project ID | Yes | - |
+| `api_token` | QA.tech API token | Yes | - |
+| `test_plan_short_id` | Test plan short ID to run | No | All tests |
+| `blocking` | Wait for test results before completing | No | `false` |
+| `applications_config` | JSON with application environment overrides | No | - |
+| `api_url` | Custom API URL | No | `https://app.qa.tech` |
 
-For more information about our API and other integration options, check out our [Start Run API Reference](/api-reference/start-run).
+**Outputs:**
+
+| Output | Description |
+|:-------|:------------|
+| `runId` | The ID of the created test run |
+| `runShortId` | Short ID for the test run |
+| `success` | Boolean indicating if run was successful |
+| `run_result` | Test execution result (`PASSED`, `FAILED`, `SKIPPED`) - only when `blocking: true` |
+| `run_status` | Final run status (`COMPLETED`, `ERROR`, etc.) - only when `blocking: true` |
+
+## Direct API Usage
+
+If you prefer direct API calls instead of the GitHub Action:
+
+```bash
+curl -X POST \
+  -H "Authorization: Bearer $QATECH_API_TOKEN" \
+  -H "Content-Type: application/json" \
+  -d '{
+    "testPlanShortId": "your-test-plan-id",
+    "applications": {
+      "app-short-id": {
+        "environment": {
+          "url": "https://preview.example.com",
+          "name": "Preview Environment"
+        }
+      }
+    }
+  }' \
+  https://app.qa.tech/api/projects/$QATECH_PROJECT_ID/runs
+```
+
+See the [Start Run API Reference](/api-reference/start-run) for complete documentation including error responses and authentication details.
 
 ## Exploratory Testing with @qatech
 
@@ -352,4 +218,4 @@ You'll receive setup instructions and access within 1-2 business days.
 ## Related Features
 
 - **Automatic PR reviews:** [GitHub App](/configuration/github-app) runs tests on every PR
-- **Manual testing:** Use the GitHub Action (documented above) for CI/CD workflows
+- **Direct API:** [Start Run API Reference](/api-reference/start-run) for custom integrations
